[package]
name = "egui_dip_switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"

[lib]
name = "egui_dip_switch"
path = "src/lib.rs"

[[bin]]
name = "egui_dip_switch_example"
path = "src/main.rs"
