[package]
name = "egui_dip_switch"
license = "MIT"
version = "0.2.0"
edition = "2021"
description = "Interactive dip switch widget for egui"
keywords= ["egui", "eframe", "widget", "dip switch"]

[dependencies]
eframe = "0.26"

[lib]
name = "egui_dip_switch"
path = "src/lib.rs"

[[bin]]
name = "egui_dip_switch_example"
path = "src/main.rs"
